--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,5 @@
 name: BookEdit
 version: '${project.version}'
-main: org.plugin.bookedit.BookEdit
+main: com.minecraftcitiesnetwork.bookedit.BookEdit
 api-version: '1.20'
-authors: [KNProNoob]
-commands:
-  book:
-    description: Main command for BookEdit
-    usage: /book anonymous - Makes the book author anonymous
+authors: [KNProNoob, Technofied]
